src/t8_messy/t8_messy_helper.h

/*
  This file is part of t8code.
  t8code is a C library to manage a collection (a forest) of multiple
  connected adaptive space-trees of general element classes in parallel.

  Copyright (C) 2015 the developers

  t8code is free software; you can redistribute it and/or modify
  it under the terms of the GNU General Public License as published by
  the Free Software Foundation; either version 2 of the License, or
  (at your option) any later version.

  t8code is distributed in the hope that it will be useful,
  but WITHOUT ANY WARRANTY; without even the implied warranty of
  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  GNU General Public License for more details.

  You should have received a copy of the GNU General Public License
  along with t8code; if not, write to the Free Software Foundation, Inc.,
  51 Franklin Street, Fifth Floor, Boston, MA 02110-1301, USA.
*/

#ifndef T8_MESSY_HELPER_H
#define T8_MESSY_HELPER_H

#include <t8.h>

T8_EXTERN_C_BEGIN ();

void                t8_messy_generate_data (double ****data, int x_length,
                                            int y_length, double value);

void                t8_messy_sine_2d (double ****data, int x_length,
                                      int y_length);

void                t8_messy_gaussian (double ****data, int x_length,
                                       int y_length);

T8_EXTERN_C_END ();

#endif /* T8_MESSY_HELPER_H */